# pangwas

./: .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  environment.yml  index.html  nextflow.config  pipeline.nf  pyproject.toml  search.json
.github/workflows/: docker.yaml  docs.yaml  nextflow.yaml  public.yaml  python.yaml  release.yaml  test.yaml
conf/: base.config  schema_input.json
coverage/: class_index.html  function_index.html  index.html  status.json  z_26d649cd72250432___init___py.html  z_26d649cd72250432_pangwas_py.html
data/streptococcus_pneumoniae/: clusters.tsv  nextflow.config  samplesheet.csv  tree.nwk  variants.Rtab
data/test/: nextflow.config  samplesheet.csv  variants.Rtab
data/tutorial_core/: clusters.tsv  nextflow.config  reference.bed  reference.gff3  samplesheet.csv  samplesheet_precomputed.csv  tree.nwk
data/tutorial_pangenome/: nextflow.config  pangenome.bed
developers/: developers.html
docs/: _quarto.yml
docs/developers/: developers.md
docs/manual/: annotate.md  binarize.md  defrag.md  extract.md  gwas.md  heatmap.md  manhattan.md  snps.md  (+5 more)
manual/: align.html  annotate.html  binarize.html  cluster.html  collect.html  defrag.html  extract.html  gwas.html  heatmap.html  manhattan.html  root_tree.html  snps.html  structural.html  summarize.html  table_of_contents.html  table_to_rtab.html  tree.html  vcf_to_rtab.html
nextflow/: nextflow_schema.json  pipeline.nf
pipeline/: pipeline.html
tests/: conftest.py
tutorials/: 01_test.html  02_strep_pneumo.html  02_strep_pnuemo.html  03_pyseer_tutorial.html  tutorials.html
(+348 files in other folders)
